tests/examples/snapshots/fail/sorts/sort_checking_basic.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_checking_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected s but found bool
  ┌─ tests/examples/fail/sorts/sort_checking_basic.fly:6:1
  │
6 │ assert forall x:bool. (forall y:s. y = x) & x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


