tests/examples/snapshots/fail/sorts/sort_inference_basic.fly.cvc5.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_inference_basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'not yet implemented', src/fly/sorts.rs:235:23
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

